--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,13 @@ body {
   background-color: #f2f2f2;
 }
 
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: black;
+}
+
 .movie-card {
   background-color: #fff;
   border: 0;
