--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,9 +71,22 @@ a:visited {
 .save-button:hover {
   background-color: green;
   color: white;
+  cursor: pointer;
+  border: 1px solid black;
 }
 
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
+  border: 1px solid grey;
+}
+
+.home-button:hover {
+  background-color: blue;
+  color: white;
+  border: 1px solid black;
+}
+
+.solo-card:hover {
+  cursor: default;
 }
