Add Save functionality. Create new Clear button that clears the savedMovieList.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,7 +34,6 @@ a:visited {
   box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
     0 2px 4px rgba(0, 0, 0, 0.24);
   padding: 1rem;
-  cursor: pointer;
   position: relative;
   margin: 1rem auto;
   width: 75%;
@@ -67,6 +66,7 @@ a:visited {
   border: 1px solid grey;
   padding: 5px 10px;
   background-color: lightseagreen;
+  font-size: 16px;
 }
 .save-button:hover {
   background-color: green;
@@ -85,8 +85,26 @@ a:visited {
   background-color: blue;
   color: white;
   border: 1px solid black;
+  cursor: pointer;
 }
 
-.solo-card:hover {
-  cursor: default;
+.clear-button {
+  padding: 5px 10px;
+  background-color: lightcoral;
+  border: 1px solid grey;
+  font-size: 16px;
+}
+
+.clear-button:hover {
+  background-color: red;
+  color: white;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.list-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80px;
 }
