--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,7 +63,8 @@ a:visited {
   position: absolute;
   top: 25px;
   right: 25px;
-  border: 1px solid grey;
+  border: 2px solid green;
+  border-radius: 3px;
   padding: 5px 10px;
   background-color: lightseagreen;
   font-size: 16px;
@@ -72,33 +73,37 @@ a:visited {
   background-color: green;
   color: white;
   cursor: pointer;
-  border: 1px solid black;
+  border: 2px solid black;
 }
 
 .home-button {
   padding: 5px 10px;
-  background-color: lightskyblue;
-  border: 1px solid grey;
+  background-color: white;
+  color: blue;
+  border: 2px solid blue;
+  border-radius: 3px;
 }
 
 .home-button:hover {
   background-color: blue;
   color: white;
-  border: 1px solid black;
+  border: 2px solid black;
   cursor: pointer;
 }
 
 .clear-button {
   padding: 5px 10px;
-  background-color: lightcoral;
-  border: 1px solid grey;
+  background-color: white;
+  color: red;
+  border: 2px solid red;
+  border-radius: 3px;
   font-size: 16px;
 }
 
 .clear-button:hover {
   background-color: red;
   color: white;
-  border: 1px solid black;
+  border: 2px solid black;
   cursor: pointer;
 }
 
